--- a/.ci/Dockerfile.arm
+++ b/.ci/Dockerfile.arm
@@ -5,8 +5,8 @@ ENV EMULATOR_API_LEVEL=22 ABI="default;armeabi-v7a" EMULATOR_NAME='Nexus_6P_API_
 ADD .ci/config.ini $HOME/.android/avd/$EMULATOR_NAME.avd/config.ini
 
 RUN sdkmanager "system-images;android-$EMULATOR_API_LEVEL;$ABI" && \
-    apt-get update && \
-    apt-get install -y imagemagick && \
-    rm -rf /var/lib/apt/lists/*
+    sudo apt-get update && \
+    sudo apt-get install -y imagemagick && \
+    sudo rm -rf /var/lib/apt/lists/*
 
 RUN echo no | avdmanager create avd -n $EMULATOR_NAME -k "system-images;android-$EMULATOR_API_LEVEL;$ABI"
