Try KVM Container

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,9 +1,10 @@
 task:
   name: Test (ARM)
   container:
-    dockerfile: .ci/Dockerfile.arm
+    dockerfile: .ci/Dockerfile.x86
     cpu: 4
     memory: 10G
+    kvm: true
   pub_cache:
     folder: ~/.pub-cache
   test_script:
